--- a/containers/lightburn/Dockerfile
+++ b/containers/lightburn/Dockerfile
@@ -2,7 +2,7 @@ FROM lscr.io/linuxserver/webtop:ubuntu-xfce
 
 # Install dependencies for LightBurn (if any are missing)
 RUN apt-get update && \
-    apt-get install -y wget git zsh htop libusb-1.0-0 libpulse0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 && \
+    apt-get install -y wget git zsh neovim htop libusb-1.0-0 libpulse0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 && \
     rm -rf /var/lib/apt/lists/*
 
 # Download and install LightBurn
@@ -10,6 +10,9 @@ RUN wget https://release.lightburnsoftware.com/LightBurn/Release/LightBurn-v1.7.
     chmod +x LightBurn.run && \
     ./LightBurn.run \
     && rm LightBurn.run
+
+RUN sed -i 's|^Exec=.*|Exec=env BOX64_ALLOWMISSINGLIBS=1 box64 /usr/share/LightBurn/LightBurn|' /usr/share/applications/lightburn.desktop
+
 
 # Create a script that will be run at container startup to add user to dialout
 RUN echo '#!/bin/bash\n\
